# choqok-old

./: CMakeLists.txt  README
src/: CMakeLists.txt  Messages.sh  accounts_base.ui  backend.cpp  backend.h  choqok.desktop  choqok.kcfg  choqokui.rc  constants.h  datacontainers.h  kwitter.kcfg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_base.ui  mediamanagement.cpp  mediamanagement.h  prefs_base.ui  quicktwit.cpp  quicktwit.h  settings.kcfgc  status_base.ui  statustextedit.cpp  statustextedit.h  statuswidget.cpp  statuswidget.h  systrayicon.cpp  systrayicon.h
